se agrega configuracion y pom para rabbit, se agrega un consumer y un producer para utilizar los ejemplos. Se agrega exception personalizada para rabbit, se agregan servicios para testeo de rabbit. Se modifica los properties y se agrega docker compose para levantar rabbit sin problemas

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -38,3 +38,11 @@ spring:
     out-of-order: true
     encoding: UTF-8
     execute-in-transaction: true
+  rabbitmq:
+    addresses: ${RABBIT_ADDRESS}
+    username: ${RABBIT_USER}
+    password: ${RABBIT_PASS}
+    listener:
+      simple:
+        concurrency: 2
+        max-concurrency: 100
