--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -29,3 +29,11 @@ spring:
     validateOnMigrate: true
     locations: classpath:db/migration
     out-of-order: true
+  rabbitmq:
+    addresses: localhost:5672
+    password: guest
+    username: guest
+    listener:
+      simple:
+        concurrency: 2
+        max-concurrency: 100
