--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -2,6 +2,11 @@ spring:
   config:
     activate:
       on-profile: local
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          key-uri: www.google.com
   datasource:
     url: jdbc:h2:file:~/SHIPS;INIT=create schema if not exists SHIPS;
     username: sa
@@ -37,3 +42,14 @@ spring:
       simple:
         concurrency: 2
         max-concurrency: 100
+
+spaceship:
+  openapi:
+    external: com.meroz.spaceship
+    internal: com.meroz.spaceship.internal
+    title: ^project.name^
+    version: ^project.version^
+    description: ^project.description^
+    terms-of-service: "www.google.com/terminos"
+  security:
+    aud: "Spaceship"
